[package]
name = "huskarl-reqwest"
version = "0.1.0"
edition = "2024"
description = "reqwest support for huskarl (OAuth2 client) ecosystem."
repository = "https://github.com/huskarl-rs/huskarl-reqwest"
license = "MIT OR Apache-2.0"
keywords = ["oauth2", "security", "authentication"]
categories = ["authentication"]
readme = "README.md"

[features]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
bon = { version = "3", default-features = false }
bytes = { version = "1", default-features = false }
http = { version = "1", default-features = false }
huskarl-core = { version = "0.1", default-features = false }
reqwest = { version = "0.13", default-features = false }
snafu = { version = "0.9", default-features = false }
